--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
+windows/**
+
 *#
 *.iml
 *.ipr
@@ -40,3 +42,23 @@ target
 secrets.yml
 .gradletasknamecache
 .sts4-cache
+
+
+# Eclipse
+.settings/
+.classpath
+.project
+bin/
+
+# IntelliJ IDEA
+.idea
+*.iml
+
+# VS Code
+.vscode
+
+# Maven
+target/
+
+# OS
+.DS_Store
